# MultiplayerPong

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  configuration.game
assets/: convert_wav_to_header.c
lib/: CMakeLists.txt  aabb.c  aabb.h  client_state.c  client_state.h  collission_sound.h  input.c  input.h  movement.c  movement.h  player.h  properties.c  properties.h  render.c  render.h  score.c  score.h  server.c  server.h  sound.c  sound.h  tags.h  utils.c  utils.h
src/: CMakeLists.txt  aabb.c  aabb.h  components.c  components.h  entities.c  entities.h  game_state.h  main_client.c  main_server.c  menus.c  menus.h  movement.h  network.c  network.h  network_systems.c  network_systems.h  player.h  properties.h  score.h  sound.h  systems.c  systems.h  utils.c  utils.h
